# uoh-msc-ai-journal

./: .gitconfig  .gitignore  Makefile  README.md  pyproject.toml
assets/course/: README.md  Revision for the Timed Course Test.pdf:Zone.Identifier
config/: refs.bib
journal/: Home.md  Learning-journal.md  README.md  _Sidebar.md  ml.md  responsible-technology-1.md  responsible-technology-2.md
journal/ml/: README.md  unit01.md  unit02.md  unit03.md  unit04.md  unit05.md  unit06.md  unit07.md  unit10.md  unit11.md
journal/ml/images/unit2/: k-means.R  som.R
journal/ml/mock_quiz/: Q1.md  Q10.md  Q11.md  Q12.md  Q13.md  Q14.md  Q15.md  Q2.md  Q3.md  Q4.md  Q5.md  Q6.md  Q7.md  Q8.md  Q9.md
journal/ml/mock_quiz/images/: q2_gifs.R
journal/ml/mock_quiz/scripts/: q2.R
journal/ml/unit01/: README.md
journal/ml/unit02/: README.md
journal/ml/unit02/images/: ng.R  scl.R
journal/ml/unit03/: README.md  unit03.R
journal/ml/unit04/: README.md  unit04.R
journal/ml/unit05/: 3d_cacner_plot.py  PCA_SVM.py  README.md  cancer_data.md  classficiation.md  explore_Cacner_markdown.py  explore_cancer_Data.py  svm_classify.py  unit05.R
journal/ml/unit06/: README.md  unit06.R
journal/ml/unit07/: README.md  unit07.R  unit07.py
journal/ml/unit07/tasks/: 01.md  02.md  03.md  04.md  06.md
journal/ml/unit08/: README.md
journal/ml/unit09/: README.md
journal/responsible-technology-1/: README.md
journal/responsible-technology-2/: reflection.md
templates/assignment/: Makefile  dissertation_main.tex  um.cls
